# GetHardware

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Collectors/: cpu_stats_collector.cpp  disk_stats_collector.cpp  ram_stats_collector.cpp  stats_collector.cpp
src/Models/: stat_dto.cpp
